Eksempel på forenklet databasetest ved bruk av @SpringBootTest, @AutoConfigureJdbc og @ServiceConnection